- testing reworked - version of test updated - new classes implementation is tested - test remain unchanged just work the same with the new project structure